--- a/assets/css/stylesProducto.css
+++ b/assets/css/stylesProducto.css
@@ -16,7 +16,7 @@ body {
   color: #333;
   line-height: 1.6;
   display: grid;
-  grid-template-rows: auto 1fr auto; /* header/nav - main - footer */
+  grid-template-rows: auto 1fr auto; 
   grid-template-areas: "nav" "main" "footer";
   min-height: 100vh;
 }
@@ -174,7 +174,7 @@ footer {
   background: #fff;
 }
 
-/* contenedor de los botones dentro de la card */
+
 .producto .acciones {
   margin-top: auto;
   display: flex;
@@ -183,7 +183,7 @@ footer {
   flex-wrap: wrap;
 }
 
-/* estilo común para Agregar al carrito y Ver detalle */
+
 .btn-accion {
   display: inline-block;
   background: #004466;
@@ -193,7 +193,7 @@ footer {
   border-radius: 8px;
   cursor: pointer;
   transition: background 0.3s;
-  text-decoration: none; /* para que el <a> no tenga subrayado */
+  text-decoration: none; 
 }
 
 .btn-accion:hover {
